adding layout for the webpage.

--- a/src/main/webapp/site.css
+++ b/src/main/webapp/site.css
@@ -1,12 +1,4 @@
-section {
-    display: -webkit-flex;
-    display: flex;
-}
 
 article {
-    -webkit-flex: 3;
-    -ms-flex: 3;
-    flex: 3;
-    /*background-color: #f1f1f1;*/
-    padding: 0 250px;
+    padding: 10px 250px;
 }
